--- a/templates/regist.html
+++ b/templates/regist.html
@@ -59,6 +59,7 @@
             <br>
             <div class='form'>
                 <h1 id="title">注 册</h1>
+                <h3 style="color: red">用户名和密码中请勿含有特殊字符</h3>
                 <form action="/regist" method="post">
                     <div class="input"><input name="username" placeholder="用户名"></div>
                     <div class="input" style="margin-top: 15px"><input name="password" placeholder="密码(长度不少于6位)" type="password"></div>
