--- a/templates/admin.html
+++ b/templates/admin.html
@@ -74,7 +74,7 @@
                     <!-- 查找结果 -->
                     <div v-if="statuscode>=1">
                         <el-table :data="booklist.slice((currentPage-1)*pageSize,currentPage*pageSize)" style="width: 100%">
-                            <el-table-column prop="bookid" label="书号" width="50"></el-table-column>
+                            <el-table-column prop="bookid" label="书号" width="60"></el-table-column>
                             <el-table-column prop="bookname" label="书名" width="500"></el-table-column>
                             <el-table-column prop="author" label="作者" width="400"></el-table-column>
                             <el-table-column prop="publisher" label="出版社" width="200"></el-table-column>
@@ -149,7 +149,7 @@
                         <el-table
                           :data="allusr_borrowlist.filter(data => !search || data.bookname.toLowerCase().includes(search.toLowerCase()))"
                           style="width: 100%">
-                            <el-table-column label="书号" prop="bookid" width="50"></el-table-column>
+                            <el-table-column label="书号" prop="bookid" width="60"></el-table-column>
                             <el-table-column label="用户ID" prop="uid" width="100"></el-table-column>
                             <el-table-column label="用户名" prop="username" width="200"></el-table-column>
                             <el-table-column label="书名" prop="bookname" width="400"></el-table-column>
@@ -158,15 +158,15 @@
                             <el-table-column label="到期剩余时间（天）" prop="remain" width="150"></el-table-column>
                             <el-table-column label="借阅状态" prop="isexpired" width="100">
                                 <template slot-scope="scope">
-                                    <p v-if="allusr_borrowlist[scope.$index].isstarted==1&&allusr_borrowlist[scope.$index].isexpired==1" style="color: red;">已逾期</p>
-                                    <p v-if="allusr_borrowlist[scope.$index].isstarted==1&&allusr_borrowlist[scope.$index].isexpired==0" style="color: green;">已开始</p>
-                                    <p v-if="allusr_borrowlist[scope.$index].isstarted==0" style="color: blue;">未开始</p>
+                                    <p v-if="allusr_borrowlist.filter(data => !search || data.bookname.toLowerCase().includes(search.toLowerCase()))[scope.$index].isstarted==1&&allusr_borrowlist.filter(data => !search || data.bookname.toLowerCase().includes(search.toLowerCase()))[scope.$index].isexpired==1" style="color: red;">已逾期</p>
+                                    <p v-if="allusr_borrowlist.filter(data => !search || data.bookname.toLowerCase().includes(search.toLowerCase()))[scope.$index].isstarted==1&&allusr_borrowlist.filter(data => !search || data.bookname.toLowerCase().includes(search.toLowerCase()))[scope.$index].isexpired==0" style="color: green;">已开始</p>
+                                    <p v-if="allusr_borrowlist.filter(data => !search || data.bookname.toLowerCase().includes(search.toLowerCase()))[scope.$index].isstarted==0" style="color: blue;">未开始</p>
                                 </template>
                             </el-table-column>
                             <el-table-column label="是否进行逾期统计" prop="iscalculated" width="200">
                                 <template slot-scope="scope">
-                                    <p v-if="allusr_borrowlist[scope.$index].isexpired==1&&allusr_borrowlist[scope.$index].iscalculated==1" style="color: green; font-size: 18px;">√</p>
-                                    <p v-else-if="allusr_borrowlist[scope.$index].isexpired==1&&allusr_borrowlist[scope.$index].iscalculated==0" style="color: red; font-size: 18px;">×</p>
+                                    <p v-if="allusr_borrowlist.filter(data => !search || data.bookname.toLowerCase().includes(search.toLowerCase()))[scope.$index].isexpired==1&&allusr_borrowlist.filter(data => !search || data.bookname.toLowerCase().includes(search.toLowerCase()))[scope.$index].iscalculated==1" style="font-size: 18px;">√</p>
+                                    <p v-else-if="allusr_borrowlist.filter(data => !search || data.bookname.toLowerCase().includes(search.toLowerCase()))[scope.$index].isexpired==1&&allusr_borrowlist.filter(data => !search || data.bookname.toLowerCase().includes(search.toLowerCase()))[scope.$index].iscalculated==0" style="color: red; font-size: 18px;">×</p>
                                     <p v-else style="font-size: 18px;">-</p>
                                 </template>
                             </el-table-column>
@@ -177,11 +177,17 @@
                                 </template>
                                 <template slot-scope="scope">
                                     <el-button
-                                        v-if="allusr_borrowlist[scope.$index].isstarted!=0"
+                                        v-if="allusr_borrowlist.filter(data => !search || data.bookname.toLowerCase().includes(search.toLowerCase()))[scope.$index].isstarted!=0"
                                         icon="el-icon-s-management"
                                         size="mini"
                                         type="danger"
                                         @click="return_book(scope.row)">归还</el-button>
+                                    <el-button
+                                        v-else
+                                        icon="el-icon-s-management"
+                                        size="mini"
+                                        type="primary"
+                                        @click="force_return_book(scope.row)">强制取消借阅</el-button>
                                 </template>
                             </el-table-column>
                         </el-table>
@@ -202,7 +208,7 @@
                         <el-table
                           :data="buylist.filter(data => !search || data.bookname.toLowerCase().includes(search.toLowerCase()))"
                           style="width: 100%">
-                            <el-table-column label="书号" prop="bookid" width="50"></el-table-column>
+                            <el-table-column label="书号" prop="bookid" width="60"></el-table-column>
                             <el-table-column label="用户ID" prop="uid" width="100"></el-table-column>
                             <el-table-column label="用户名" prop="username" width="100"></el-table-column>
                             <el-table-column label="书名" prop="bookname" width="300"></el-table-column>
@@ -223,7 +229,7 @@
                         <el-dialog title="图书畅销榜" :visible.sync="top_sale_visible" :append-to-body="true" width="75%">
                             <el-table :data="topsale">
                                 <el-table-column prop="listindex" label="排名" width="50"></el-table-column>
-                                <el-table-column prop="bookid" label="书号" width="50"></el-table-column>
+                                <el-table-column prop="bookid" label="书号" width="60"></el-table-column>
                                 <el-table-column prop="bookname" label="书名" width="300"></el-table-column>
                                 <el-table-column prop="author" label="作者" width="300"></el-table-column>
                                 <el-table-column prop="publisher" label="出版社" width="250"></el-table-column>
@@ -249,13 +255,13 @@
                             <el-table-column label="已借阅图书数目（本）" prop="borrownum" width="200"></el-table-column>
                             <el-table-column label="等级" prop="level" width="200">
                                 <template slot-scope="scope">
-                                    <p v-if="usrlist[scope.$index].level==0">普通用户</p>
-                                    <p v-else>管理员</p>
+                                    <p v-if="usrlist.filter(data => !search || data.username.toLowerCase().includes(search.toLowerCase()))[scope.$index].level==0" style="font-weight: 500;">普通用户</p>
+                                    <p v-else style="color: blue; font-weight: 500;">管理员</p>
                                 </template>
                             </el-table-column>
                             <el-table-column width="200">
                                 <template slot-scope="scope">
-                                    <el-button icon="el-icon-refresh" v-if="usrlist[scope.$index].level==0" size="mini" @click="reset_passwd(scope.row)">重置密码</el-button>
+                                    <el-button icon="el-icon-refresh" v-if="usrlist.filter(data => !search || data.username.toLowerCase().includes(search.toLowerCase()))[scope.$index].level==0" size="mini" @click="reset_passwd(scope.row)">重置密码</el-button>
                                 </template>
                             </el-table-column>
                             <el-table-column align="right">
@@ -265,7 +271,7 @@
                                 </template>
                                 <template slot-scope="scope">
                                     <el-button
-                                        v-if="usrlist[scope.$index].level==0"
+                                        v-if="usrlist.filter(data => !search || data.username.toLowerCase().includes(search.toLowerCase()))[scope.$index].level==0"
                                         icon="el-icon-info"
                                         size="mini"
                                         type="danger"
@@ -293,10 +299,10 @@
                 <el-tab-pane label="评论管理" name='comment'>
                     <template>
                         <el-table
-                          :data="all_comment_list.filter(data => !search || comment_list.content.toLowerCase().includes(search.toLowerCase()))"
+                          :data="all_comment_list.filter(data => !search || data.content.toLowerCase().includes(search.toLowerCase()))"
                           style="width: 100%">
                             <el-table-column label="评论ID" prop="cid" width="100"></el-table-column>
-                            <el-table-column label="书ID" prop="bookid" width="70"></el-table-column>
+                            <el-table-column label="书ID" prop="bookid" width="60"></el-table-column>
                             <el-table-column label="书名" prop="bookname" width="200"></el-table-column>
                             <el-table-column label="用户ID" prop="uid" width="100"></el-table-column>
                             <el-table-column label="用户名" prop="username" width="200"></el-table-column>
@@ -392,15 +398,19 @@
                     console.log(tab, event);
                     if(tab.name == 'borrow'){
                         this.get_allusr_borrowlist()
+                        this.search=''
                     }
                     else if(tab.name == 'user'){
                         this.get_allusr()
+                        this.search=''
                     }
                     else if(tab.name == 'buy'){
                         this.get_buylist()
+                        this.search=''
                     }
                     else if(tab.name == 'comment'){
                         this.get_all_comment()
+                        this.search=''
                     }
                 },
                 // 查询书籍
@@ -453,6 +463,7 @@
                             this.$notify({
                                 title: '失败',
                                 message: '新书进货失败，请检查书籍信息',
+                                type: 'warning'
                             });
                         }
                     })
@@ -490,6 +501,7 @@
                             this.$notify({
                                 title: '失败',
                                 message: '书籍信息更新失败',
+                                type: 'warning'
                             });
                         }
                     })
@@ -514,7 +526,7 @@
                 },
                 // 还书
                 return_book(row) {
-                    console.log(row)
+                    console.log(row.bookid)
                     axios.post('http://127.0.0.1:5000/admin',{
                         'message': 'return_book',
                         'bookid': row.bookid,
@@ -531,9 +543,38 @@
                         }
                         else{
                             this.$notify({
-                                title: '成功',
+                                title: '失败',
                                 message: '用户还书失败',
+                                type: 'warning'
+                            });
+                        }
+                    })
+                    .catch(function (error){
+                        console.log(error);
+                    })
+                },
+                // 强制取消借阅
+                force_return_book(row) {
+                    console.log(row.bookid)
+                    axios.post('http://127.0.0.1:5000/admin',{
+                        'message': 'force_return',
+                        'bookid': row.bookid,
+                        'username': row.username,         
+                    })
+                    .then(Response => {
+                        console.log(Response['data']['status'])
+                        if(Response['data']['status']=='success'){
+                            this.$notify({
+                                title: '成功',
+                                message: '强制取消借阅成功',
                                 type: 'success'
+                            });
+                        }
+                        else{
+                            this.$notify({
+                                title: '失败',
+                                message: '强制取消借阅失败',
+                                type: 'warning'
                             });
                         }
                     })
@@ -607,6 +648,7 @@
                             this.$notify.error({
                                 title: '失败',
                                 message: '用户密码重置失败',
+                                type: 'warning'
                             });
                         }
                     })
@@ -649,6 +691,7 @@
                             this.$notify({
                                 title: '失败',
                                 message: '用户信息修改失败',
+                                type: 'warning'
                             });
                         }
                     })
@@ -678,6 +721,7 @@
                             this.$notify({
                                 title: '失败',
                                 message: '用户信息修改失败',
+                                type: 'warning'
                             });
                         }
                     })
@@ -700,7 +744,8 @@
                         else{
                             this.$notify.error({
                                 title: '失败',
-                                message: '查看书评失败'
+                                message: '查看书评失败',
+                                type: 'warning'
                             });
                         }
                     })
@@ -741,7 +786,8 @@
                         else{
                             this.$notify.error({
                                 title: '失败',
-                                message: '删除书评失败'
+                                message: '删除书评失败',
+                                type: 'warning'
                             });
                         }
                     })
