--- a/templates/regist.html
+++ b/templates/regist.html
@@ -63,6 +63,7 @@
                 <form action="/regist" method="post">
                     <div class="input"><input name="username" placeholder="用户名"></div>
                     <div class="input" style="margin-top: 15px"><input name="password" placeholder="密码(长度不少于6位)" type="password"></div>
+                    <div class="input" style="margin-top: 15px"><input name="confirm" placeholder="再次输入密码确认" type="password"></div>
                     <div style="margin-top: 15px"><button type="submit">注册</button></div>
                 </form>
             </div>
